==> Spacedays/SimpleCanLib/STM32_SimpleCAN.cpp <==
#include <Arduino.h>
#include "ThreadSafeQueue.h"
#include "SimpleCAN.h"
#define HALSTATUS2CANSTATUS(s) (static_cast<SCCanStatus>(s))

bool RxHandlerSTM32::CANReadFrame(SimpleCanRxHeader* SCHeader, uint8_t* pData, int MaxDataLen)
{
	if (HAL_FDCAN_GetRxMessage(&SimpleCan_B_g431B::_hfdcan1, FDCAN_RX_FIFO0, &_rxHeader, pData) != HAL_OK)		//!!! Data length not checked!!!
	{
		Error_Handler(1);
		return false;
	}

	if (ProfileCallback != NULL)
	{
		// Convert the header
		SCHeader->Identifier = _rxHeader.Identifier;
		SCHeader->DataLength = DLCtoBytes[_rxHeader.DataLength>>16];			
		SCHeader->RxTimestamp = _rxHeader.RxTimestamp;
		SCHeader->FilterIndex = _rxHeader.FilterIndex;
		SCHeader->IsFilterMatchingFrame = _rxHeader.IsFilterMatchingFrame;

		SCHeader->IdType   = (_rxHeader.IdType==FDCAN_EXTENDED_ID) ? SCIdType::CAN_EXTID : SCIdType::CAN_STDID;
		SCHeader->Format = (_rxHeader.FDFormat==FDCAN_CLASSIC_CAN) ? SCCanType::CAN_CLASSIC : SCCanType::CAN_FDFCAN;
		SCHeader->RxFrameType = (_rxHeader.RxFrameType==FDCAN_DATA_FRAME) ? SCFrameType::CAN_DATA_FRAME : SCFrameType::CAN_REMOTE_FRAME;
	}
	else return false;

	return true;
}

SCCanStatus SimpleCan_B_g431B::Start(void)
{
	#ifdef A_CAN_SHDN
		digitalWrite(A_CAN_SHDN, LOW);
	#else
		#warning "No A_CAN_SHDN"
	#endif
	return HALSTATUS2CANSTATUS(HAL_FDCAN_Start(&_hfdcan1));
}

SCCanStatus SimpleCan_B_g431B::Stop(void)
{
	#ifdef A_CAN_SHDN
		digitalWrite(A_CAN_SHDN, HIGH);
	#endif
	return HALSTATUS2CANSTATUS(HAL_FDCAN_Stop(&_hfdcan1));
}

SCCanStatus SimpleCan_B_g431B::Init(SCCanSpeed speed, CanIDFilter IDFilterFunc)
{
	Serial.println("SimpleCan_B_g431B::Init()"); delay(200);

	if (IDFilterFunc) SendIDFilterFunc = IDFilterFunc;

	FDCAN_InitTypeDef *init = &_hfdcan1.Init;
	
	init->ClockDivider = FDCAN_CLOCK_DIV1;
	init->FrameFormat = FDCAN_FRAME_FD_BRS;
	init->Mode = FDCAN_MODE_NORMAL;
	init->AutoRetransmission = DISABLE;
	init->TransmitPause = ENABLE;
	init->ProtocolException = DISABLE;
	
	// 1 MBit: NominalPrescaler = 10
	// see: http://www.bittiming.can-wiki.info/
	// 170MHz / Prescaler / SyncJumpWith / (TimeSeg1 + TimeSeg2 + SyncSeg) 
	// SyncSeg = SYNC_SEG = 1, TimeSeg1 = PROP_SEG + PHASE_SEG1, TimeSeg2 = PHASE_SEG2
	init->NominalPrescaler = (uint16_t) speed;
	init->NominalSyncJumpWidth = 1;
	init->NominalTimeSeg1 = 14;
	init->NominalTimeSeg2 = 2;

	init->DataPrescaler = 1;
	init->DataSyncJumpWidth = 4;
	init->DataTimeSeg1 = 5;
	init->DataTimeSeg2 = 4;
	init->StdFiltersNbr = 1;
	init->ExtFiltersNbr = 1;
	init->TxFifoQueueMode = FDCAN_TX_FIFO_OPERATION;
	
	return HALSTATUS2CANSTATUS(HAL_FDCAN_Init(&_hfdcan1));
}

SCCanStatus SimpleCan_B_g431B::ConfigFilter(FilterDefinition *SCFilter)
{
	// Convert the filter definition
	FDCAN_FilterTypeDef  STMFilter;

	SCCanStatus rc = SC2STM32_Filter(SCFilter, &STMFilter);
	if (CAN_OK!=rc) return rc;
	return HALSTATUS2CANSTATUS(HAL_FDCAN_ConfigFilter(&_hfdcan1, &STMFilter));
}

SCCanStatus SimpleCan_B_g431B::ActivateNotification(uint16_t dataLength, RxCallback callback, void* userData)
{
	if (RxHandlerP != NULL)
	{
		return HALSTATUS2CANSTATUS(HAL_ERROR);
	}
#if USE_HAL_FDCAN_REGISTER_CALLBACKS
	// This would make interrupt handling much easier and cleaner.
	// But how to activate it on Arduino platform?
	//_hfdcan1.Instance->RxFifo0Callback = ...;
#endif
	RxHandlerP = &Can1RxHandler;
	RxHandlerP->SetProfileCallback(dataLength, callback, userData);
	Serial.println("CAN: notifications activated");
	return HALSTATUS2CANSTATUS(HAL_FDCAN_ActivateNotification(&_hfdcan1, FDCAN_IT_RX_FIFO0_NEW_MESSAGE | FDCAN_IT_TX_COMPLETE, FDCAN_TX_BUFFER0));
}

bool SimpleCan_B_g431B::SendNextMessageFromQueue()
{
	// Serial.println("CAN: SendNextMessageFromQueue)");
	if(TxQueue.NumElements && !(_hfdcan1.Instance->TXFQS & FDCAN_TXFQS_TFQF))
	{
		CANTxMessage Msg;
		if (!TxQueue.Dequeue(&Msg))
			// Nothing to send...
			return true;

		// Serial.printf("CAN (STM32): Sending %d bytes with ID 0x%x as %s frame\n", Msg.Size, Msg.CanID, Msg.EFF?"EFF":"std");

		if (Msg.RTR)
		{
			// The queued message was an RTR
			SendRequestMessage(Msg.Size, Msg.CanID, Msg.EFF);
		}
		else
		{
			// Skip command if sender ID is disabled.
			if ( SendIDFilterFunc && !SendIDFilterFunc(Msg.CanID) ) 
				return true; 

			bool TxOk=true;
			FDCAN_TxHeaderTypeDef TxHeader;
			TxHeader.Identifier = Msg.CanID;
			TxHeader.IdType = Msg.EFF ? FDCAN_EXTENDED_ID : FDCAN_STANDARD_ID;
			TxHeader.TxFrameType = FDCAN_DATA_FRAME;
			TxHeader.ErrorStateIndicator = FDCAN_ESI_ACTIVE;
			TxHeader.BitRateSwitch = FDCAN_BRS_OFF;
			TxHeader.FDFormat = FDCAN_CLASSIC_CAN;
			TxHeader.TxEventFifoControl = FDCAN_NO_TX_EVENTS;
			TxHeader.MessageMarker = 0;
			switch(Msg.Size)
			{
				case 0: TxHeader.DataLength = FDCAN_DLC_BYTES_0; break;
				case 1: TxHeader.DataLength = FDCAN_DLC_BYTES_1; break;
				case 2: TxHeader.DataLength = FDCAN_DLC_BYTES_2; break;
				case 3: TxHeader.DataLength = FDCAN_DLC_BYTES_3; break;
				case 4: TxHeader.DataLength = FDCAN_DLC_BYTES_4; break;
				case 5: TxHeader.DataLength = FDCAN_DLC_BYTES_5; break;
				case 6: TxHeader.DataLength = FDCAN_DLC_BYTES_6; break;
				case 7: TxHeader.DataLength = FDCAN_DLC_BYTES_7; break;
				case 8: TxHeader.DataLength = FDCAN_DLC_BYTES_8; break;
				default: Serial.print("CAN: Invalid message length!\n"); 
					TxOk = false;
			}

			if (TxOk)
			{
				// Serial.printf("Tx %d", TxQueue.NumElements);
				TxOk = (HALSTATUS2CANSTATUS(HAL_FDCAN_AddMessageToTxFifoQ(&_hfdcan1, &TxHeader, Msg.Data)) == CAN_OK);
			}
			if (!TxOk)
				Serial.printf("CAN: sending message failed (0x%lx)!\n", _hfdcan1.ErrorCode);
		}
	}

	return true;
}
